# cli_assist

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE
artifacts/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  hello_world
artifacts/ClangTidy/: clang-tidy-fixes.yaml
src/: cmake.rs  lib.rs  main.rs
test/: CMakeLists.txt
test/CMakeModules/: CodeCoverage.cmake
utils/sast/: .clang-tidy
